<resources>
    <string name="app_name">Farming App</string>
    <string name="no_animal">No Animal Found</string>
    <string name="no_crop">No Crop Found</string>
    <string name="delete_preamble">Deleting</string>
    <string name="tab_label1">Animals</string>
    <string name="tab_label2">Crops</string>
    <string name="button_save">Save</string>
    <string name="type">Type</string>
    <string name="enter_type">Enter Type</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="time">Time</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="animal_id">Animal Id:</string>
    <string name="animal_type">Animal Type:</string>
    <string name="date">Date:</string>
    <string name="crop_id">Crop Id:</string>
    <string name="crop_type">Crop Type:</string>
    <string name="acres">Acres:</string>
    <string name="type_a_number">Type a Number</string>
</resources>